tests/fail/fail_member_access_not_supported.kr
fn inisiu() {
    nter valor = 1;
    mostra(valor.campo);
}
